Remove custom runtime image